
* Thu Jun 26 12:47:42 2003, pabs <pabs@pablotron.org>
  * raggle: fix space prefix problem in String#reflow
  * raggle: remove unnecessary String#dup calls from reflow_string
    methods (String#reflow already returns a dupped string)

* Thu Jun 26 14:29:10 2003, pabs <pabs@pablotron.org>
  * raggle: fixed nil.unescape_html bug reported by Ville Aine
    (vaine@cs.helsinki.fi)

* Thu Jun 26 20:08:18 2003, pabs <pabs@pablotron.org>
  * raggle: applied command-line option handling code cleanup from
    Ville Aine (vaine@cs.helsinki.fi).

* Thu Jun 26 20:10:48 2003, pabs <pabs@pablotron.org>
  * AUTHORS: update Ville Aine's entry.

* Thu Jun 26 20:36:05 2003, pabs <pabs@pablotron.org>
  * raggle: added mark all items as read (bound to 'm')
  * raggle: added shell escape (bound to '!')
  * raggle: added jump to next unread (bound to 'n')
  * (all this stuff was suggested by Ville Aine)

* Thu Jun 26 21:08:38 2003, pabs <pabs@pablotron.org>
  * raggle: fix "Link:" and "Date:" X values now that the String\#reflow
    bug is fixed

* Thu Jun 26 21:28:14 2003, pabs <pabs@pablotron.org>
  * raggle: redo the String#reflow fix (I changed it to show Richard
    why it broke, and accidentally recommitted it that way)

* Thu Jun 26 21:29:15 2003, richlowe <richlowe@richlowe.net>
  * raggle: Bind ^L to refresh the screen (this uses a literal ^L in the
            code, this is evil)

* Thu Jun 26 23:46:27 2003, richlowe <richlowe@richlowe.net>
  * raggle.1: Document 's', 'o', 'm', '!' and 'n' in the KEYS section.
  * raggle: Document 'm', '!' and 'n' in the Keyboard section of the
            internal documentation feed.

* Fri Jun 27 17:14:16 2003, pabs <pabs@pablotron.org>
  * raggle: fix bug in FeedList#edit so --save-items works again
  
* Fri Jun 27 17:57:16 2003, pabs <pabs@pablotron.org>
  * TODO: add new ideas to list
  * raggle: change 'Q' to 'q' in inline keyboard documentation

* Fri Jun 27 18:56:47 2003, pabs <pabs@pablotron.org>
  * remove old/


	






